# SimpleMesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
data/: open_box.off  rt.off  rt_ascii.stl
data/isect/: generate_corpus.py
examples/: 01_build_mesh.cpp  01_build_mesh.py  02_io.cpp  02_io.py  03_navigation.cpp  03_navigation.py  04_smart_handles.cpp  04_smart_handles.py  05_editing.cpp  05_editing.py  06_properties.cpp  06_properties.py  07_buffers.cpp  07_numpy.py  08_geometry.cpp  08_geometry.py  09_subdivision.cpp  09_subdivision.py  10_decimation.cpp  10_decimation.py  11_smoothing.cpp  11_smoothing.py  12_check_and_repair.cpp  12_check_and_repair.py
include/simplemesh/: Algorithms.h  Circulators.h  Decimater.h  Handles.h  Items.h  Mesh.h  MeshChecker.h  MeshRepair.h  PreMesh.h  Properties.h  SmartHandles.h  Vec3.h
include/simplemesh/exact/: CDT2d.h  Expansion.h  HomogeneousGeometry.h  Interval.h  MeshBoolean.h  MeshInTriangle.h  Predicates.h  README.md  SurfaceIntersection.h  TriangleIntersection.h
python/: bindings.cpp
src/: Algorithms.cpp  Decimater.cpp  Mesh.cpp  MeshChecker.cpp  MeshIO.cpp  MeshRepair.cpp  PreMesh.cpp
tests/: test_mesh.cpp
tests/exact/: Int128.h  test_cdt.cpp  test_cdt_constraints.cpp  test_corpus_baseline.cpp  test_expansion.cpp  test_homogeneous.cpp  test_interval.cpp  test_mesh_boolean.cpp  test_mesh_in_triangle.cpp  test_predicates.cpp  test_surface_intersection.cpp  test_triangle_isect.cpp
